objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_Id__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Monitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor__c</fullName>
        <formula>IF( wbsendit__Campaign_Monitor_Id__c == null,
HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;LinkCampaign?Id=&quot; + Id , &quot;Link to Campaign Monitor&quot;, &quot;_self&quot;),
HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;SendItReports?campaignId=&quot; + wbsendit__Campaign_Monitor_Id__c + &quot;&amp;reportId=1&quot;, &quot;View Report&quot;, &quot;_self&quot;) + &quot; &quot; + HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;Disconnect?Id=&quot; + Id, &quot;[Disconnect]&quot;, &quot;_self&quot;))</formula>
        <inlineHelpText>Connect this Salesforce Campaign to sent campaigns in Campaign Monitor. Use this to manage campaign reports from within Salesforce. Send It will add any members it finds in Campaign Monitor to this campaign.</inlineHelpText>
        <label>Campaign Monitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Text_Version__c</fullName>
        <description>Text version of the email sent.</description>
        <inlineHelpText>Text version of the email sent.</inlineHelpText>
        <label>Email Text Version</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Web_Version__c</fullName>
        <description>Web version of the email campaign.</description>
        <inlineHelpText>Web version of the email campaign.</inlineHelpText>
        <label>Email Web Version</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Bounced__c</fullName>
        <description>Number of bounced emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of bounced emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Clicks__c</fullName>
        <description>Number of clicks for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of clicks for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Forwards__c</fullName>
        <description>Number of forwarded emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of forwarded emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Likes__c</fullName>
        <description>Number of likes for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of likes for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Mentions__c</fullName>
        <description>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Mentions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Opens__c</fullName>
        <description>Number of open emails for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of open emails for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Recipients__c</fullName>
        <description>Number of recipients for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of recipients for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Recipients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Spam_Complaints__c</fullName>
        <description>Number of Spam Complaints for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of Spam Complaints for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Spam Complaints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Unique_Opens__c</fullName>
        <description>Number of unique open emails for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of unique open emails for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Unique Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Unsubscribed__c</fullName>
        <description>Number of unsubscribes for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of unsubscribes for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Unsubscribed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__World_View_Email_Tracking__c</fullName>
        <description>World view of the email campaign tracking.</description>
        <inlineHelpText>World view of the email campaign tracking.</inlineHelpText>
        <label>World View Email Tracking</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>